--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hardhat": "^2.3.3"
   },
   "dependencies": {
+    "@uniswap/lib": "^1.1.1",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^10.0.0"
